--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
-    "@angular/fire": "^7.5.0",
+    "@angular/fire": "7.4",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
@@ -31,6 +31,7 @@
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
+    "angular": "^1.8.3",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
